k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: course-management
  labels:
    name: course-management
    environment: production
